2002-09-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/GNUmakefile: make PFA for sauter CM fonts.

2002-09-10  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/GNUmakefile: make map file for pfa target as well. 

	* scm/tex.scm (end-output): add newline to output

	* lily/include/sequential-iterator.hh (class Sequential_iterator):
	don't use Protected_scm for music-iterator members. 

	* lily/music-iterator.cc (Music_iterator): initialize music_
	

2002-09-09  Juergen Reuter  <reuter@ipd.uka.de>

	* input/test/accid.ly: updated test file to show all available
	accidentals styles

	* lily/accidental.cc, lily/key-signature-interface.cc,
	lily/include/accidental-interface.hh: added method
        get_fontcharname() to provide proper fall-back cases for missing
        accidentals; print warning if font char lookup fails

        * lily/time-signature.cc: fixed documentation bug

2002-09-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/musical-request.cc: do ADD_MUSIC for String_number_req.

	* lily/include/lily-guile.hh (scm_remember_upto_here_1): add glue

	* lily/sequential-iterator.cc (get_pending_events): don't delete
	music-iterator.
	
2002-09-08  Rune Zedeler  <rune@zedeler.dk>

	* scm/music-property-description.scm: describe string-number (whoops)

	* Documentation/user/refman.itely: Tablature and bar number updates
	
2002-09-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lyric-combine-music-iterator.cc
	(Lyric_combine_music_iterator): small bugfix

	* lily/include/simultaneous-music-iterator.hh (class
	Simultaneous_music_iterator): use SCM list for list of iterators.
	
	* lily/cxx-function-smob.cc: remove file.

	* lily/include/cxx-function-smob.hh: remove file.

	* lily/include/music-iterator.hh (class Music_iterator): smobify
	music-iterator; many changes throughout. They are now constructed
	through procedures that return to the smobbed iterator.

	* lily/include/*.hh: all derived_mark() functions are now const.
