@@ -1,3 +1,9 @@
+
+2002-09-10  Juergen Reuter  <reuter@ipd.uka.de>
+
+	* lily/stem.cc: added warning when font symbol not found;
+	small cleanups
+
 2002-09-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* mf/GNUmakefile: make PFA for sauter CM fonts.
